# itstep

./: ConsoleApplication3.cpp  Project5.cpp
15 Puzzle Game/: 15 Puzzle Game.sln
15 Puzzle Game/15 Puzzle Game/: 15 Puzzle Game.vcxproj  15 Puzzle Game.vcxproj.filters  main.cpp
Array/: Array.sln
Array/Array/: Array.cpp  Array.vcxproj  Array.vcxproj.filters  arrays.h  arrays.impl.h
Calc2/: .gitignore  Calc2.sln
Calc2/Calc2/: Calc2.vcxproj  Calc2.vcxproj.filters  Source.cpp  maths_operations.cpp  maths_operations.h
ColoredText/: ColoredText.sln
ColoredText/ColoredText/: ColoredText.vcxproj  ColoredText.vcxproj.filters  Source.cpp  console.h
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleGames/: ConsoleGames.sln
ConsoleGames/15 Puzzle Game/: 15 Puzzle Game.vcxproj  15 Puzzle Game.vcxproj.filters  main.cpp  table_config.h
ConsoleGames/2048/: 2048.vcxproj  main.cpp  table_config.h
ConsoleGames/Common/: Common.vcxitems  TextGraphics.cpp  TextGraphics.h  game.cpp  game.h  keypad.cpp  keypad.h
ConsoleGames/XO/: XO.vcxproj  main.cpp  table_config.h
CycleForAndArray/: CycleForAndArray.sln
Function-HomeWork/: Function-HomeWork.sln
Game_Reqursion/: Game_Reqursion.sln
HomeWork/: HomeWork.sln
HomeWork-CycleFor/: HomeWork-CycleFor.sln
Pointer/: Pointer.sln
SBU911-Functions_overload/: SBU911-Functions_overload.sln
SpiritCalc/: CMakeLists.txt
SpiritCalc/SpiritCalc/: CMakeLists.txt  SpiritCalc.cpp  SpiritCalc.h  pow.cpp  pow.h
calc/: calc.sln
(+37 files in other folders)
